# plethora-ai

./: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
automate/: .env.example  AGENT-SERVER.md  (+6 more)
weave_hack/weave_hack/: chrome_extension_example.js  chrome_extension_popup.html  chrome_extension_popup.js  package-lock.json  pyproject.toml  tasklist.md  test-extension-debug.html  test-extension.html  test-save-page-feature.md  test_youtube_transcript.py  userscript-test-report.md  userscripts-dev.json
weave_hack/weave_hack/automate/: AGENT-GUIDE.md  agent-example.ts  linkedin-manual-helper.ts  linkedin-session-manager.ts  local-browser-manager.ts  package.json  test-agent-step-by-step.ts  test-browser.ts
weave_hack/weave_hack/docs/: prd-chrome-extension-dynamic-scripts.md  userscripts.md
weave_hack/weave_hack/examples/: client_example.py
weave_hack/weave_hack/extension/: popup.js
weave_hack/weave_hack/extension/content/: content-script.ts
weave_hack/weave_hack/extension/shared/: config.ts
weave_hack/weave_hack/extension/shared/services/: agent-client.ts
weave_hack/weave_hack/extension/shared/utils/: index.ts
weave_hack/weave_hack/extension/sidebar/: package-lock.json  tailwind.config.js
weave_hack/weave_hack/extension/userscripts/: us_1234567890_demo.js  us_1234567891_github.js
weave_hack/weave_hack/overlay_agent_dir/: __init__.py  agent.py  overlay_agent.py  requirements.txt  simple_overlay_generator.py
weave_hack/weave_hack/scripts/: build-userscripts.js
weave_hack/weave_hack/vibrowse/: README.md  pyproject.toml
(+125 files in other folders)
