[project]
name = "guide-creator-flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.86.0",
    "crewai-tools>=0.17.0",
    "exa-py>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "weave>=0.51.0",
]

[project.scripts]
search = "guide_creator_flow.main:kickoff"
run_search = "guide_creator_flow.main:kickoff"
server = "guide_creator_flow.server:start_server"
plot = "guide_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guide_creator_flow"]

[tool.crewai]
type = "flow"
